# ideasdoppyo

./: LICENCE  setup.cfg  setup.py
docs/: README.md
examples/: NIRCAmkII_parser.py  bus_system_map.csv  gds100.py  gds100_udp.py  memmap_nm2.py  mmap_nm2_demo.py  nm2.py  nm2_RAM.py  nm2_asic_conf.json  nm2_udp.py  register_reader.py  standalone.py  top_level.py  udp.py
examples/gds100/: gds100.py  gds100_udp.py
src/: packet_handler.py  virtual_registers.py
src/ideasdoppyo/: __init__.py  dataformats.py  packet_handler.py  tcphandler.py  udphandler.py
test/: test.py
