[metadata]
name = ideasdoppyo
description = TCP and UDP handling towards IDEAS Doppyo
author = tostmoe
platforms = win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages = src
version = 0.1.1
python_requires = >=3.6
package_dir =
    =src
