[metadata]
name = ideasdoppyo
description = TCP and UDP handling towards IDEAS Doppyo
author = tostmoe
platforms = win32
version = attr: ideasdoppyo.__version__
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages = ideasdoppyo
version = attr: ideasdoppyo.__version__
python_requires = >=3.6
install_requires =
    numpy>=1.21.4
    
package_dir =
    =src
